# $Id: Makefile.am,v 1.5 2007-02-07 13:36:58 adam Exp $

etcdatadir = $(pkgdatadir)/etc
etcdata_DATA =  \
 pqf.properties \
 cqlpass.properties \
 yazgfs.xml \
 maps.xml \
 MARC21slim2DC.xsl \
 MARC21slim2MODS.xsl \
 MARC21slim2RDFDC.xsl \
 MARC21slimUtils.xsl

EXTRA_DIST = $(etcdata_DATA) debian.init.d

