# $Id: Makefile.am,v 1.6 2008-01-25 16:30:47 adam Exp $

etcdatadir = $(pkgdatadir)/etc
etcdata_DATA =  \
 pqf.properties \
 cqlpass.properties \
 yazgfs.xml \
 maps.xml \
 MARC21slim2DC.xsl \
 MARC21slim2MODS.xsl \
 MARC21slim2RDFDC.xsl \
 MARC21slimUtils.xsl \
 opacxml.xsd

EXTRA_DIST = $(etcdata_DATA) debian.init.d

