## This file is part of the YAZ toolkit.
## Copyright (C) 1995-2009 Index Data

etcdatadir = $(pkgdatadir)/etc
etcdata_DATA =  \
 pqf.properties \
 cqlpass.properties \
 yazgfs.xml \
 maps.xml \
 MARC21slim2DC.xsl \
 MARC21slim2MODS.xsl \
 MARC21slim2RDFDC.xsl \
 MARC21slimUtils.xsl \
 marc21_to_endnote.xsl \
 opacxml.xsd

EXTRA_DIST = $(etcdata_DATA) debian.init.d

