## $Id: Makefile.am,v 1.2 2000-02-28 11:44:39 adam Exp $

noinst_LIBRARIES=libret.a

libret_a_SOURCES = d1_handle.c d1_read.c d1_attset.c d1_tagset.c d1_absyn.c \
  d1_grs.c d1_sutrs.c d1_varset.c d1_espec.c d1_doespec.c d1_map.c d1_marc.c\
  d1_write.c d1_expout.c d1_sumout.c d1_soif.c d1_prtree.c d1_if.c

INCLUDES=-I../include 

